--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>Online Shop</title>
+    <title>E Shop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <style>
         .jumbotron{
@@ -17,8 +17,15 @@
     {% include 'inc/navbar.html' %}
     <div class="jumbotron">
         {% include 'inc/messages.html' %}
-        {% block content %} {% endblock %}
+
+        {% block content %}
+
+        {% endblock %}
+
+
     </div>
+
+
 
 </body>
 </html>
