--- a/templates/base.html
+++ b/templates/base.html
@@ -1,16 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <title>E Shop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <style>
-        .jumbotron{
-            padding: 20px;
-            margin-bottom: 20px;
-            background-color: #e9ecef;
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'css/base_css.css' %}">
+    {% block mincss %} {% endblock %}
 </head>
 <body>
 
@@ -26,6 +22,8 @@
     </div>
 
 
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 
 </body>
 </html>
