--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -2,9 +2,20 @@
     <div class="container-fluid">
         <div class="navbar-nav">
             <a class="nav-link active" href="{% url 'home:index' %}">صفحه اصلی</a>
+
             <span class="text text-warning mt-2">|</span>
+        {% if request.user.is_authenticated %}
+
+            <a class="nav-link active" href="{% url 'accounts:logout' %}">خروج از حساب</a>
+             <span class="text text-warning mt-2">|</span>
+            {% else %}
+            <a class="nav-link active" href="{% url 'accounts:login' %}">ورود</a>
+            <span class="text text-warning mt-2">|</span>
+
             <a class="nav-link active" href="{% url 'accounts:register' %}">عضویت</a>
-            <span class="text text-warning mt-2">|</span>
+                                    <span class="text text-warning mt-2">|</span>
+        {% endif %} 
+
             {% if request.user.is_admin %}
             <a class="nav-link active" href="{% url 'home:bucket' %}">باکت</a>
             {% endif %}
