--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>E Shop</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.rtl.min.css" integrity="sha384-5/ZcxA7Dub2FNG09dHw8CHmPN7Fz6ASlweagj0nuXjmMyupgH9n9F5Hd926zsu3/" crossorigin="anonymous">    <link rel="stylesheet" href="{% static 'css/base_css.css' %}">
+    <link rel="stylesheet" href="{% static 'css/fonts.css' %}">
+    <link rel="stylesheet" href="{% static 'css/base_css.css' %}">
     {% block mincss %} {% endblock %}
 </head>
 <body>
